Fixing styling for social links on small breakpoints

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -33,19 +33,6 @@
   font-size: 12rem;
 }
 
-.social-links {
-  a {
-    margin: 0 .75rem;
-  }
-  :first-child {
-    margin-left: 0;
-  }
-  .logo {
-    height: 2rem;
-    fill: white;
-  }
-}
-
 .link {
   text-decoration: none;
   &:hover {
